[gd_scene load_steps=13 format=3 uid="uid://bg24r2642jpyw"]

[ext_resource type="Script" uid="uid://b4pxiysdjl6cg" path="res://assets/arts_graphic/ui/menu/main_menus.gd" id="1_slv7n"]
[ext_resource type="Shader" uid="uid://2426lu58r8do" path="res://assets/arts_graphic/shaders/dual_kawase_blur_downsample.gdshader" id="2_gho6j"]
[ext_resource type="PackedScene" uid="uid://3dac3f7s7tk" path="res://assets/arts_graphic/ui/menu/menu_button.tscn" id="2_gn2qf"]
[ext_resource type="PackedScene" uid="uid://crynbkg8m246g" path="res://assets/arts_graphic/ui/menu/Properties/Propertie.tscn" id="3_bv7pn"]
[ext_resource type="Shader" uid="uid://bm4xb8ba5ispy" path="res://assets/arts_graphic/shaders/dual_kawase_blur_upsample.gdshader" id="3_p7o8j"]
[ext_resource type="Script" uid="uid://bbcfelb2s8jd2" path="res://assets/arts_graphic/ui/menu/option_window.gd" id="3_xuyqn"]
[ext_resource type="PackedScene" uid="uid://d2aioktb3sqfc" path="res://assets/arts_graphic/ui/menu/scroll_label.tscn" id="3_ysg1o"]
[ext_resource type="Script" uid="uid://jipj3bpgw2p0" path="res://assets/arts_graphic/ui/menu/settings.gd" id="6_fe7ho"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p7o8j"]
shader = ExtResource("2_gho6j")
shader_parameter/iterations = 3
shader_parameter/offset = 2.0
shader_parameter/lod = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fe7ho"]
shader = ExtResource("3_p7o8j")
shader_parameter/iterations = 3
shader_parameter/offset = 2.0
shader_parameter/lod = 1.2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuyqn"]
bg_color = Color(0.126, 0.135333, 0.14, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lckfm"]
bg_color = Color(0.144, 0.154667, 0.16, 1)

[node name="MainMenus" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("1_slv7n")

[node name="MenuControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BackGround" type="Control" parent="MenuControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Grey" type="ColorRect" parent="MenuControl/BackGround"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.156863)
metadata/_edit_use_anchors_ = true

[node name="DownsampleBlur" type="ColorRect" parent="MenuControl/BackGround"]
material = SubResource("ShaderMaterial_p7o8j")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="UpsampleBlur" type="ColorRect" parent="MenuControl/BackGround"]
material = SubResource("ShaderMaterial_fe7ho")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="MenuControl"]
layout_mode = 2
anchor_left = 0.335417
anchor_top = 0.0266667
anchor_right = 0.664063
anchor_bottom = 0.1725
offset_left = -193.651
offset_top = -2.28882e-05
offset_right = 193.651
offset_bottom = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 128
text = "HYPERLUNATIC"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="InforVBC" type="VBoxContainer" parent="MenuControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.958333
anchor_right = 1.0
anchor_bottom = 0.958333
offset_left = -98.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(100, 50)
metadata/_edit_use_anchors_ = true

[node name="LoadingLabel" type="Label" parent="MenuControl/InforVBC"]
layout_mode = 2
text = "loading ..."

[node name="VersionLabel" type="Label" parent="MenuControl/InforVBC"]
layout_mode = 2
text = "v0.3_2025.02"

[node name="ColorRect" type="ColorRect" parent="MenuControl"]
custom_minimum_size = Vector2(430, 560)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -280.0
offset_bottom = 280.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="TutorialLabel" type="Label" parent="MenuControl/ColorRect"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -276.0
offset_bottom = 276.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "ESC:菜单  
F3:Debug菜单  
~:panku_console
WASD:移动  
Space:跳跃,长按跳的更高  
鼠标下滚轮:小跳  
Shift:冲刺  
Q:转身  
Alt:回头  
左键:开枪  
F:捡起  
R:旋转物体,鼠标滚轮,调整物体远近  
Z:视野缩放,鼠标滚轮,调整缩放  
Ctrl:低速模式,静步,防止掉落,空中低速
贴近场景边沿可攀爬"
autowrap_mode = 3

[node name="TextTimer" type="Timer" parent="MenuControl"]
wait_time = 0.3
one_shot = true
ignore_time_scale = true

[node name="ButtonContainer" type="Control" parent="MenuControl"]
custom_minimum_size = Vector2(200, 420)
layout_direction = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -210.0
offset_right = 350.0
offset_bottom = 210.0
grow_vertical = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.0

[node name="Button_0" parent="MenuControl/ButtonContainer" instance=ExtResource("2_gn2qf")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_right = 300.0
offset_bottom = 56.0
size_flags_horizontal = 1

[node name="Button_1" parent="MenuControl/ButtonContainer" instance=ExtResource("2_gn2qf")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 117.0
size_flags_horizontal = 1

[node name="Button_2" parent="MenuControl/ButtonContainer" instance=ExtResource("2_gn2qf")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 121.0
offset_right = 300.0
offset_bottom = 177.0
size_flags_horizontal = 1

[node name="Button_3" parent="MenuControl/ButtonContainer" instance=ExtResource("2_gn2qf")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 181.0
offset_right = 300.0
offset_bottom = 238.0
size_flags_horizontal = 1

[node name="Button_4" parent="MenuControl/ButtonContainer" instance=ExtResource("2_gn2qf")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 242.0
offset_right = 300.0
offset_bottom = 298.0
size_flags_horizontal = 1

[node name="Button_5" parent="MenuControl/ButtonContainer" instance=ExtResource("2_gn2qf")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 302.0
offset_right = 300.0
offset_bottom = 359.0
size_flags_horizontal = 1

[node name="Button_6" parent="MenuControl/ButtonContainer" instance=ExtResource("2_gn2qf")]
layout_mode = 2
anchors_preset = 0
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 363.0
offset_right = 300.0
offset_bottom = 420.0
size_flags_horizontal = 1

[node name="OptionWindowCancelConfirm" type="ConfirmationDialog" parent="MenuControl"]
initial_position = 1
size = Vector2i(298, 100)
max_size = Vector2i(400, 140)
dialog_text = "还有未应用的设置，确定要取消更改吗？"

[node name="OptionWindow" type="Window" parent="MenuControl"]
disable_3d = true
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
title = "Options"
initial_position = 1
size = Vector2i(750, 800)
transient = true
mouse_passthrough = true
min_size = Vector2i(300, 300)
keep_title_visible = true
script = ExtResource("3_xuyqn")

[node name="Settings" type="Node" parent="MenuControl/OptionWindow"]
script = ExtResource("6_fe7ho")

[node name="PanelContainer" type="PanelContainer" parent="MenuControl/OptionWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xuyqn")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 22
theme_override_styles/panel = SubResource("StyleBoxFlat_lckfm")
current_tab = 2

[node name="常规" type="ScrollContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/常规"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/常规/MarginContainer"]
layout_mode = 2

[node name="游戏" type="ScrollContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/游戏"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/游戏/MarginContainer"]
layout_mode = 2

[node name="图形" type="ScrollContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "常规"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 26
text = "屏幕 16:9 1920,1200
窗口 1:1 2000,2000"
horizontal_alignment = 1

[node name="DisplayMode" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
unique_name_in_owner = true
layout_mode = 2
propertie_name = "显示模式"
control_mode = 3

[node name="AspectRatios" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
unique_name_in_owner = true
layout_mode = 2
propertie_name = "纵横比"
control_mode = 3

[node name="Resolutions" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
unique_name_in_owner = true
layout_mode = 2
propertie_name = "分辨率"
control_mode = 3

[node name="VerticalSync" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
unique_name_in_owner = true
layout_mode = 2
propertie_name = "垂直同步"

[node name="FOV" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "视野"
control_mode = 1
default_value = 90.0
num_hint_end = 180.0
num_hint_decimals = 0

[node name="Exposure" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "曝光"
control_mode = 0
default_value = 0.8
num_hint_end = 16.0

[node name="Label2" type="Label" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "画面后期"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnisotropicFiltering" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "各向异性过滤"
control_mode = 3

[node name="MSAA 2D" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "MSAA 2D"
control_mode = 3

[node name="MSAA 3D" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "MSAA 3D"
control_mode = 3

[node name="ScreenSpaceAA" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "屏幕空间抗锯齿"
control_mode = 3

[node name="TAA" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "时间抗锯齿"

[node name="SSR" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "屏幕空间反射"
control_mode = 1
num_hint_end = 256.0
num_hint_decimals = 0

[node name="SSAO" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "屏幕空间环境光遮蔽"

[node name="SSIL" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "屏幕空间间接照明"

[node name="Glow" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer" instance=ExtResource("3_bv7pn")]
layout_mode = 2
propertie_name = "辉光"

[node name="音频" type="ScrollContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/音频"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/音频/MarginContainer"]
layout_mode = 2

[node name="输入" type="ScrollContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/输入"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/输入/MarginContainer"]
layout_mode = 2

[node name="模组" type="ScrollContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/模组"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/模组/MarginContainer"]
layout_mode = 2

[node name="其他" type="ScrollContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/其他"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/其他/MarginContainer"]
layout_mode = 2

[node name="ButtonControl" type="HBoxContainer" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Confirm" type="Button" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/ButtonControl"]
custom_minimum_size = Vector2(100, 40)
layout_direction = 2
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "确定"

[node name="Apply" type="Button" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/ButtonControl"]
custom_minimum_size = Vector2(100, 40)
layout_direction = 2
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "应用"

[node name="Cancel" type="Button" parent="MenuControl/OptionWindow/PanelContainer/VBoxContainer/ButtonControl"]
custom_minimum_size = Vector2(100, 40)
layout_direction = 2
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "取消"

[node name="ScrollLabelTimer" type="Timer" parent="MenuControl"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ScrollLabelContainer" type="Control" parent="MenuControl"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -45.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScrollLabel" parent="MenuControl/ScrollLabelContainer" instance=ExtResource("3_ysg1o")]
layout_mode = 0

[node name="ScrollLabel2" type="Label" parent="MenuControl/ScrollLabelContainer"]
visible = false
layout_mode = 2
offset_right = 1700.0
offset_bottom = 45.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "前方到站：东冰港电子科技无限公司  想要下车的乘客请提前准备下车"
metadata/_edit_use_anchors_ = true

[connection signal="about_to_popup" from="MenuControl/OptionWindow" to="MenuControl/OptionWindow" method="_on_about_to_popup"]
[connection signal="close_requested" from="MenuControl/OptionWindow" to="MenuControl/OptionWindow" method="_on_close_requested"]
[connection signal="option_selected" from="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer/DisplayMode" to="MenuControl/OptionWindow" method="_on_display_mode_option_selected"]
[connection signal="option_selected" from="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer/AspectRatios" to="MenuControl/OptionWindow" method="_on_aspect_ratios_option_selected"]
[connection signal="option_selected" from="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer/Resolutions" to="MenuControl/OptionWindow" method="_on_resolutions_option_selected"]
[connection signal="option_selected" from="MenuControl/OptionWindow/PanelContainer/VBoxContainer/TabContainer/图形/MarginContainer/VBoxContainer/VerticalSync" to="MenuControl/OptionWindow" method="_on_vertical_sync_option_selected"]
[connection signal="pressed" from="MenuControl/OptionWindow/PanelContainer/VBoxContainer/ButtonControl/Confirm" to="MenuControl/OptionWindow" method="_on_confirm_pressed"]
[connection signal="pressed" from="MenuControl/OptionWindow/PanelContainer/VBoxContainer/ButtonControl/Apply" to="MenuControl/OptionWindow" method="_on_apply_pressed"]
[connection signal="pressed" from="MenuControl/OptionWindow/PanelContainer/VBoxContainer/ButtonControl/Cancel" to="MenuControl/OptionWindow" method="_on_cancel_pressed"]
[connection signal="timeout" from="MenuControl/ScrollLabelTimer" to="." method="_on_scroll_label_timer_timeout"]
